<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game</string>
    <string name="main_header">Main Menu</string>
    <string name="time_header">Timed Game</string>
    <string name="time_label">Time:</string>
    <string name="points_label">Points:</string>
    <string name="lives_label">Lives:</string>
    <string name="final_score_label">Final Score:</string>
    <string name="action_settings">Settings</string>
    <string name="settings_header">Game Settings</string>
    <string name="volume_switch">Sounds (On)</string>
    <string name="difficulty_switch">Difficulty (Easy)</string>
    <string name="footer_string">ShoDev Games!</string>

</resources>
