<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fantasy_sky_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#AA575757">

    <TextView
        android:text="@string/main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="@dimen/header_text_size"
        android:textColor="#ffffff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#aa004eae"
            android:id="@+id/time_mode_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="Timed Mode"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#aa004eae"
            android:id="@+id/points_mode_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="Points Mode"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#aa004eae"
            android:id="@+id/settings_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/settings_header"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#aa000000"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/footer_string"/>

    </LinearLayout>

</RelativeLayout>
