<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/rainbow_space">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#AA575757">

        <TextView
            android:text="@string/time_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/header_text_size"
            android:textColor="#ffffff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_default_margin"
        android:layout_marginRight="@dimen/activity_default_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_label"
                android:textSize="@dimen/label_text_size"
                android:textColor="#ffffff"
                android:gravity="end"
                android:padding="@dimen/activity_default_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/points"
                android:text="00"
                android:textSize="@dimen/values_text_size"
                android:textColor="#ffffb500"
                android:gravity="end"
                android:paddingTop="@dimen/activity_default_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_label"
                android:textSize="@dimen/label_text_size"
                android:textColor="#ffffff"
                android:gravity="end"
                android:paddingTop="@dimen/activity_default_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timer"
                android:text="0:00"
                android:textSize="@dimen/values_text_size"
                android:textColor="#ffff0000"
                android:gravity="end"
                android:padding="@dimen/activity_default_margin"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shapeGrid"
            android:numColumns="9"
            android:columnWidth="10dp"
            android:layout_marginLeft="@dimen/activity_default_margin"
            android:layout_marginRight="@dimen/activity_default_margin"
            android:padding="10dp"
            android:background="#5a575757"
            android:gravity="center"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_default_margin"
            android:layout_marginRight="@dimen/activity_default_margin"
            android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lives_label"
                    android:textSize="@dimen/label_text_size"
                    android:textColor="#ffffff"
                    android:gravity="end"
                    android:padding="@dimen/activity_default_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lives"
                    android:text="00"
                    android:textSize="@dimen/values_text_size"
                    android:textColor="#ff14ff44"
                    android:gravity="end"
                    android:paddingTop="@dimen/activity_default_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_default_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="This is where power ups etc. will go"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>